--- a/Tarea-LandingPage/assets/css/promociones.css
+++ b/Tarea-LandingPage/assets/css/promociones.css
@@ -3,19 +3,16 @@ body{
     margin: 0;
 }
 
-.article{
-    display: block;
-    margin: 0 auto;
+.article {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-gap: 5px;
+    grid-auto-flow: column;
 }
 
-.box img{
-    
+.box-img img {
+    max-width: 200px;
+    max-height: 150px;
     margin: 0 auto;
     transition: transform 0.5s ease;
-}
-
-.img{
-    width: 5px;
-    overflow-clip-margin: content-box;
-    overflow: clip;
 }
